Don't enter "word selection mode" without an actual selection.

BUG: 131369

svn path=/branches/KDE/3.5/kdelibs/; revision=566355